# trustedge

./: .dockerignore  .gitignore  0001-envelope-harden.diff  ALGORITHM_AGILITY_SUMMARY.md  AUTHENTICATION_GUIDE.md  CHANGELOG.md  CLAUDE.md  CLI.md  CODING_STANDARDS.md  CONTRIBUTING.md  COPYRIGHT.md  COPYRIGHT_IMPLEMENTATION_SUMMARY.md  Cargo.toml  DCO.md  DEPENDENCIES.md  DEVELOPMENT.md  DOCUMENTATION_AUDIT.md  DOCUMENTATION_IMPROVEMENT_PLAN.md  DOCUMENTATION_REVIEW_SUMMARY.md  DOCUMENTATION_SUMMARY.md  DOCUMENTATION_UPDATE_SUMMARY.md  DOMAIN_SEPARATION_COMPLETE.md  DOMAIN_SEPARATION_SUMMARY.md  ENHANCEMENT_FORMAT_AWARE_DECRYPTION.md  ENTERPRISE.md  EXAMPLES.md  FEATURES.md  FORMAT.md  GEMINI.md  ISSUE_DAY10_SERVER_AUTH.md  ISSUE_DAY11_CLIENT_AUTH.md  LICENSING_STRATEGY.md  LINK_VALIDATION_REPORT.md  MIGRATION.md  Makefile  P0_IMPLEMENTATION.md  PHASE3_PROGRESS.md  POST_RELEASE_CHECKLIST.md  PROJECT_BOARD_UPDATE_SUMMARY.md  PROTOCOL.md  (+36 more)
crates/attestation/: Cargo.toml  README.md
crates/attestation/src/: lib.rs
crates/core/: AUTHENTICATION.md  BENCHMARKS.md  Cargo.toml  PERFORMANCE.md  README.md  SOFTWARE_HSM_TEST_REPORT.md  TrustEdge Client_client.cert  build.rs  ci-check.sh  fast-bench.sh
crates/core/benches/: crypto_benchmarks.rs  network_benchmarks.rs
crates/core/demo_keys/: metadata.json
crates/core/examples/: attest.rs  attestation_demo.rs  hybrid_api_demo.rs  receipts_demo.rs  transport_demo.rs  universal_backend_demo.rs  verify_attestation.rs  verify_yubikey.rs  (+6 more)
crates/experimental/: Cargo.toml
crates/platform/: Cargo.toml
crates/platform-server/: Cargo.toml
crates/receipts/: Cargo.toml  README.md
crates/seal-cli/: Cargo.toml  README.md
crates/trst-cli/: Cargo.toml  README.md  device.key  device.pub
crates/trst-core/: Cargo.toml
crates/trst-protocols/: Cargo.toml  README.md
crates/trst-wasm/: Cargo.toml  README.md  test-crypto.html
crates/trustedge-cli/: Cargo.toml  README.md
crates/types/: Cargo.toml
crates/wasm/: Cargo.toml  README.md  package.json  test.html
examples/cam.video/: Cargo.toml  README.md  device.key  device.pub  record_and_wrap.rs  verify_cli.rs
trustedge-audio/: AUTHENTICATION.md  BENCHMARKS.md  CI_CHECK_SOLUTION.md  Cargo.toml  FORMAT_SPECIFIC_TESTS_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  NETWORK_TESTING_SUMMARY.md  PERFORMANCE.md  PROJECT_CLEANUP_SUMMARY.md  SOFTWARE_HSM_TEST_REPORT.md  TrustEdge Client_client.cert  ci-check.sh  fast-bench.sh  final_test.trst  final_test_roundtrip.txt  out.trst  recovered_audio.raw  test.trst  test_audio_decrypted.pcm  test_data_restored.json  test_day9.sh  test_fmt.key  test_unknown.xyz  test_verify.txt
trustedge-audio/benches/: crypto_benchmarks.rs  network_benchmarks.rs
trustedge-audio/demo_keys/: metadata.json
trustedge-audio/examples/: transport_demo.rs  universal_backend_demo.rs
trustedge-audio/output/: conn1_chunk100_seq100.meta.json  conn1_chunk101_seq101.meta.json  conn1_chunk102_seq102.meta.json  conn1_chunk103_seq103.meta.json  conn1_chunk104_seq104.meta.json  conn1_chunk105_seq105.meta.json  conn1_chunk106_seq106.meta.json  conn1_chunk107_seq107.meta.json  conn1_chunk108_seq108.meta.json  conn1_chunk109_seq109.meta.json  conn1_chunk10_seq10.meta.json  conn1_chunk110_seq110.meta.json  conn1_chunk111_seq111.meta.json  conn1_chunk112_seq112.meta.json  conn1_chunk113_seq113.meta.json  conn1_chunk114_seq114.meta.json  conn1_chunk115_seq115.meta.json  conn1_chunk116_seq116.meta.json  conn1_chunk117_seq117.meta.json  conn1_chunk118_seq118.meta.json  conn1_chunk119_seq119.meta.json  conn1_chunk11_seq11.meta.json  conn1_chunk120_seq120.meta.json  conn1_chunk121_seq121.meta.json  conn1_chunk12_seq12.meta.json  conn1_chunk13_seq13.meta.json  conn1_chunk14_seq14.meta.json  conn1_chunk15_seq15.meta.json  conn1_chunk16_seq16.meta.json  conn1_chunk17_seq17.meta.json  conn1_chunk18_seq18.meta.json  conn1_chunk19_seq19.meta.json  conn1_chunk1_seq1.meta.json  conn1_chunk20_seq20.meta.json  conn1_chunk21_seq21.meta.json  conn1_chunk22_seq22.meta.json  conn1_chunk23_seq23.meta.json  conn1_chunk24_seq24.meta.json  conn1_chunk25_seq25.meta.json  conn1_chunk26_seq26.meta.json  (+81 more)
trustedge-audio/src/: audio.rs  auth.rs  format.rs  lib.rs  main.rs  vectors.rs
trustedge-audio/tests/: auth_integration.rs  cli_roundtrip.rs  network_integration.rs  roundtrip_integration.rs  software_hsm_integration.rs  universal_backend_integration.rs  vectors.rs
trustedge-core/: .gitignore  AUTHENTICATION.md  CI_CHECK_SOLUTION.md  Cargo.toml  PHASE_1_COMPLETION_REPORT.md  PHASE_2A_COMPLETION_REPORT.md  PHASE_2_PLAN.md  README.md  TrustEdge Client_client.cert  ci-check.sh  cobertura.xml
trustedge-core/examples/: hybrid_api_demo.rs  universal_backend_demo.rs  yubikey_certificate_demo.rs  yubikey_demo.rs  yubikey_enhanced_cert_demo.rs  yubikey_hardware_signing_demo.rs  yubikey_phase2c_demo.rs  yubikey_pubkey_demo.rs  yubikey_quic_demo.rs  yubikey_quic_hardware_demo.rs
trustedge-core/src/: asymmetric.rs  audio.rs  envelope.rs  envelope_v2_bridge.rs  format.rs  hybrid.rs  lib.rs  main.rs  vectors.rs
trustedge-core/tests/: domain_separation_test.rs  network_integration.rs  roundtrip_integration.rs  software_hsm_integration.rs  transport_integration.rs  universal_backend_integration.rs  yubikey_hardware_detection.rs  yubikey_hardware_tests.rs  yubikey_integration.rs  yubikey_real_operations.rs  yubikey_strict_hardware.rs
trustedge-pubky/: Cargo.toml
trustedge-pubky-advanced/: Cargo.toml  README.md
trustedge-pubky-advanced/examples/: hybrid_encryption_demo.rs
trustedge-pubky-advanced/src/: envelope.rs  keys.rs  lib.rs  pubky_client.rs
trustedge-pubky/examples/: clean_adapter_demo.rs  simple_demo.rs  your_exact_api.rs
trustedge-pubky/src/: lib.rs  mock.rs
trustedge-pubky/tests/: integration_tests.rs
trustedge-receipts/: Cargo.toml  README.md
trustedge-receipts/src/: lib.rs
trustedge-wasm/: .npmignore  Cargo.toml  README.md  package.json
trustedge-wasm/examples/: basic-usage.html
trustedge-wasm/js/: trustedge.d.ts  trustedge.js
trustedge-wasm/src/: crypto.rs  lib.rs  utils.rs
(+1049 files in other folders)
