#
# Copyright (c) 2025 TRUSTEDGE LABS LLC
# This source code is subject to the terms of the Mozilla Public License, v. 2.0.
# If a copy of the MPL was not distributed with this file, You can obtain one at https://mozilla.org/MPL/2.0/.
#
# Project: trustedge — Privacy and trust at the edge.
#

[workspace]
members = [
    "crates/core",
    "crates/attestation",
    "crates/receipts",
    "crates/wasm",
    "crates/pubky",
    "crates/pubky-advanced",
    "crates/trst-core",
    "crates/trst-cli",
    "crates/trst-wasm",
]
resolver = "2"

# Shared workspace dependencies
[workspace.dependencies]
# Cryptography
aead = "0.5"
aes-gcm = "0.10.3"
blake3 = "1.5"
ed25519-dalek = { version = "2", features = ["rand_core"] }
p256 = { version = "0.13", features = ["ecdsa", "pem", "ecdh"] }
pbkdf2 = "0.12"
rand = "0.8"
rand_core = "0.6"
rsa = { version = "0.9", features = ["pem"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
hkdf = "0.12"

# Pubky integration
pubky = "0.5.4"

# Serialization
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"

# Git operations and hashing
git2 = "0.18"
sha2 = "0.10"

# Async and utilities
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
num-traits = "0.2"
thiserror = "1.0"
zeroize = "1.7"

# CLI and system
clap = { version = "4.5", features = ["derive"] }
keyring = "2.0"

# Optional features (cannot be defined at workspace level)
# cpal, pkcs11, yubikey defined in individual crates

# WASM-specific
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }

# Development dependencies
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"

[workspace.metadata]
authors = ["TrustEdge Labs <dev@trustedgelabs.com>"]
license = "MPL-2.0"
repository = "https://github.com/TrustEdge-Labs/trustedge"
homepage = "https://trustedgelabs.com"
documentation = "https://docs.rs/trustedge-core"
keywords = ["cryptography", "privacy", "security", "edge-computing", "yubikey"]
categories = ["cryptography", "authentication", "hardware-support"]

# Workspace profiles
[profile.release]
# Optimize for size for WASM builds
opt-level = "s"
lto = true
