#
# Copyright (c) 2025 TRUSTEDGE LABS LLC
# This source code is subject to the terms of the Mozilla Public License, v. 2.0.
# If a copy of the MPL was not distributed with this file, You can obtain one at https://mozilla.org/MPL/2.0/.
#
# Project: trustedge — Privacy and trust at the edge.
#

[workspace]
members = [
    "crates/core",
    "crates/types",
    "crates/platform",
    "crates/platform-server",
    "crates/trustedge-cli",
    "crates/attestation",
    "crates/receipts",
    "crates/wasm",
    "crates/pubky",
    "crates/pubky-advanced",
    "crates/trst-protocols",
    "crates/trst-cli",
    "crates/trst-wasm",
    "examples/cam.video",
]

# Crate Classification
#
# Tier 1 (Stable) — production-committed, tested in CI, maintained:
#   - trustedge-types         (shared wire types for platform services)
#   - trustedge-core          (core cryptographic library)
#   - trustedge-platform      (consolidated verification and CA service)
#   - trustedge-platform-server (standalone HTTP server binary)
#   - trustedge-cli           (main CLI binary)
#   - trustedge-trst-protocols (archive format definitions)
#   - trustedge-trst-cli      (archive CLI binary)
#   - trustedge-trst-wasm     (browser archive verification)
#
# Tier 2 (Experimental) — community/experimental, build-only CI, no maintenance commitment:
#   - trustedge-wasm          (general WASM bindings)
#   - trustedge-pubky         (Pubky network adapter)
#   - trustedge-pubky-advanced (Pubky hybrid encryption)
#   - trustedge-receipts      (re-export facade, use trustedge-core directly)
#   - trustedge-attestation   (re-export facade, use trustedge-core directly)

resolver = "2"

# Shared workspace dependencies
[workspace.dependencies]
# Cryptography
aead = "0.5"
aes-gcm = "0.10.3"
blake3 = "1.5"
ed25519-dalek = { version = "2", features = ["rand_core"] }
p256 = { version = "0.13", features = ["ecdsa", "pem", "ecdh"] }
pbkdf2 = "0.12"
rand = "0.8"
rand_core = "0.6"
rsa = { version = "0.9.10", features = ["pem"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
hkdf = "0.12"

# Pubky integration
pubky = "0.5.4"

# Internal workspace crates
trustedge-types = { path = "crates/types" }

# Serialization
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
schemars = { version = "0.8", features = ["chrono", "uuid1"] }
uuid = { version = "1", features = ["serde", "v4"] }

# Git operations
git2 = "0.18"

# Async and utilities
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
num-traits = "0.2"
thiserror = "1.0"
zeroize = "1.7"

# CLI and system
clap = { version = "4.5", features = ["derive"] }
keyring = "2.0"

# Optional features (cannot be defined at workspace level)
# cpal, pkcs11, yubikey defined in individual crates

# WASM-specific
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }

# Platform service (feature-gated in trustedge-platform)
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
hyper = "1.0"

# Development dependencies
tokio = { version = "1.0", features = ["full"] }

[workspace.metadata]
authors = ["TrustEdge Labs <dev@trustedgelabs.com>"]
license = "MPL-2.0"
repository = "https://github.com/TrustEdge-Labs/trustedge"
homepage = "https://trustedgelabs.com"
documentation = "https://docs.rs/trustedge-core"
keywords = ["cryptography", "privacy", "security", "edge-computing", "yubikey"]
categories = ["cryptography", "authentication", "hardware-support"]

# Workspace profiles
[profile.release]
# Optimize for size for WASM builds
opt-level = "s"
lto = true
