#
# Copyright (c) 2025 John Turner
# This source code is subject to the terms of the Mozilla Public License, v. 2.0.
# If a copy of the MPL was not distributed with this file, You can obtain one at https://mozilla.org/MPL/2.0/.
#
# Project: trustedge — Privacy and trust at the edge.
#
[package]
name = "trustedge-audio"
version = "0.1.1"
edition = "2024"

[dependencies]
aes-gcm = "0.10"         # AEAD (AES-GCM)
blake3 = "1.5"
aead = "0.5"
zeroize = "1.7"
rand_core = "0.6"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }   # simple CLI
