#
# Copyright (c) 2025 John Turner
# This source code is subject to the terms of the Mozilla Public License, v. 2.0.
# If a copy of the MPL was not distributed with this file, You can obtain one at https://mozilla.org/MPL/2.0/.
#
# Project: trustedge — Privacy and trust at the edge.
#
[package]
name = "trustedge-audio"
version = "0.1.2"
edition = "2024"

[dependencies]
aead = "0.5"
anyhow = "1.0"
blake3 = "1.5"
clap = { version = "4.5", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = "0.6"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
zeroize = "1.7"
aes-gcm = "0.10.3"
