#
# Copyright (c) 2025 TRUSTEDGE LABS LLC
# This source code is subject to the terms of the Mozilla Public License, v. 2.0.
# If a copy of the MPL was not distributed with this file, You can obtain one at https://mozilla.org/MPL/2.0/.
#
# Project: trustedge — Privacy and trust at the edge.
#
[package]
name = "trustedge-core"
version = "0.1.7"
edition = "2021"

[lib]
name = "trustedge_core"
path = "src/lib.rs"

[[bin]]
name = "trustedge-core"
path = "src/main.rs"

[[bin]]
name = "trustedge-server"
path = "src/bin/trustedge-server.rs"

[[bin]]
name = "trustedge-client" 
path = "src/bin/trustedge-client.rs"

[[bin]]
name = "software-hsm-demo"
path = "src/bin/software-hsm-demo.rs"

[[bin]]
name = "yubikey-demo"
path = "src/bin/yubikey-demo.rs"
required-features = ["yubikey"]

[dependencies]
aead = "0.5"
aes-gcm = "0.10.3"
anyhow = "1.0"
async-trait = "0.1"
bincode = "1.3"
blake3 = "1.5"
chrono = { version = "0.4", features = ["serde"] }  # For timestamps
clap = { version = "4.5", features = ["derive"] }
cpal = { version = "0.15", optional = true }  # Optional audio support
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
keyring = "2.0"
num-traits = "0.2"
p256 = { version = "0.13", features = ["ecdsa", "pem"] }  # For ECDSA P-256
pbkdf2 = "0.12"
pkcs11 = { version = "0.5", optional = true }  # For YubiKey/PKCS#11 support
yubikey = { version = "0.7", optional = true, features = ["untested"] }  # Real YubiKey hardware integration
rand = "0.8"  # For key generation
rand_core = "0.6"
rsa = { version = "0.9", features = ["pem"] }  # For RSA operations
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"  # For metadata saving
sha2 = "0.10"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }  # For LengthDelimitedCodec
futures-util = { version = "0.3", features = ["sink"] }  # For SinkExt and StreamExt
zeroize = "1.7"

# Network dependencies
quinn = "0.11"
rustls = "0.23"

# X.509 certificate generation and validation
x509-cert = { version = "0.2", features = ["builder"], optional = true }
signature = { version = "2.2", optional = true }  # For X.509 certificate creation
der = { version = "0.7", optional = true }        # For DER encoding/decoding
spki = { version = "0.7", optional = true }       # For SubjectPublicKeyInfo

[features]
default = []         # No features by default (CI-friendly)
audio = ["cpal"]     # Audio capture feature (opt-in)
yubikey = ["pkcs11", "dep:yubikey", "x509-cert", "der", "spki", "signature"] # YubiKey hardware support with real hardware integration

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
predicates = "3"
tempfile = "3"

[[bench]]
name = "crypto_benchmarks"
harness = false

[[bench]]
name = "network_benchmarks"
harness = false
