# Copyright (c) 2025 TRUSTEDGE LABS LLC
# MPL-2.0: https://mozilla.org/MPL/2.0/
# Project: trustedge — Privacy and trust at the edge.


[package]
name = "trustedge-pubky-advanced"
version = "0.1.0"
edition = "2021"
authors = ["TrustEdge Labs LLC <contact@trustedgelabs.com>"]
license = "MPL-2.0"
description = "Pubky integration for TrustEdge - hybrid encryption with decentralized key discovery"
repository = "https://github.com/TrustEdge-Labs/trustedge"
keywords = ["cryptography", "pubky", "decentralized", "encryption", "hybrid"]
categories = ["cryptography", "network-programming"]

[dependencies]
# Core TrustEdge functionality
trustedge-core = { path = "../trustedge-core" }

# Pubky integration
pubky = { workspace = true }

# Cryptography
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true, features = ["static_secrets"] }
aes-gcm = { workspace = true }
hkdf = { workspace = true }
blake3 = { workspace = true }
sha2 = "0.10"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Utilities
anyhow = { workspace = true }
hex = { workspace = true }
zeroize = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }

# Async support
tokio = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "hybrid_encryption_demo"
required-features = []