# Copyright (c) 2025 TRUSTEDGE LABS LLC
# MPL-2.0: https://mozilla.org/MPL/2.0/
# Project: trustedge — Privacy and trust at the edge.


[package]
name = "trustedge-pubky"
version = "0.1.0"
edition = "2021"
authors = ["TrustEdge Labs LLC <contact@trustedgelabs.com>"]
license = "MPL-2.0"
description = "Clean adapter between TrustEdge core and Pubky network"
repository = "https://github.com/TrustEdge-Labs/trustedge"
keywords = ["cryptography", "pubky", "adapter", "bridge"]
categories = ["cryptography", "network-programming"]

[[bin]]
name = "trustedge-pubky"
path = "src/bin/trustedge-pubky.rs"

[dependencies]
# Core TrustEdge functionality
trustedge-core = { path = "../trustedge-core" }

# Pubky network integration
pubky = { workspace = true }

# Utilities
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
assert_cmd = "2"
predicates = "3"
tempfile = "3"

# Temporarily exclude broken example
[[example]]
name = "clean_adapter_demo"
required-features = ["broken"]