[package]
name = "trustedge-receipts"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "demo"
path = "src/bin/demo.rs"

[dependencies]
trustedge-core = { path = "../trustedge-core" }
serde = { workspace = true }
serde_json = { workspace = true }
ed25519-dalek = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
