# Copyright (c) 2025 TRUSTEDGE LABS LLC
# MPL-2.0: https://mozilla.org/MPL/2.0/
# Project: trustedge — Privacy and trust at the edge.


[package]
name = "trustedge-receipts"
version = "0.1.0"
edition = "2021"
description = "Digital receipt system with cryptographically secure ownership chains"
authors = ["TrustEdge Labs LLC <contact@trustedgelabs.com>"]
license = "MPL-2.0"
repository = "https://github.com/TrustEdge-Labs/trustedge"
keywords = ["cryptography", "receipts", "ownership", "blockchain", "digital-assets"]
categories = ["cryptography", "data-structures"]

[[bin]]
name = "demo"
path = "src/bin/demo.rs"

[dependencies]
trustedge-core = { path = "../trustedge-core" }
serde = { workspace = true }
serde_json = { workspace = true }
ed25519-dalek = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
