# Copyright (c) 2025 TRUSTEDGE LABS LLC
# MPL-2.0: https://mozilla.org/MPL/2.0/
# Project: trustedge — Privacy and trust at the edge.

[package]
name = "trustedge-attestation"
version = "0.2.0"
edition = "2021"
description = "Hardware-backed software attestation and birth certificates for TrustEdge"
authors = ["TrustEdge Labs LLC <contact@trustedgelabs.com>"]
license = "MPL-2.0"
repository = "https://github.com/TrustEdge-Labs/trustedge"
keywords = ["cryptography", "attestation", "hardware", "yubikey", "software-integrity"]
categories = ["cryptography", "development-tools", "authentication"]

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
trustedge-core = { path = "../core" }
