# Copyright (c) 2025 TRUSTEDGE LABS LLC
# MPL-2.0: https://mozilla.org/MPL/2.0/
# Project: trustedge — Privacy and trust at the edge.

[package]
name = "trustedge-attestation"
version = "0.3.0"
edition = "2021"
description = "Experimental re-export facade for trustedge-core attestation. No maintenance commitment."
authors = ["TrustEdge Labs LLC <contact@trustedgelabs.com>"]
license = "MPL-2.0"
repository = "https://github.com/TrustEdge-Labs/trustedge"
readme = "README.md"
keywords = ["experimental", "cryptography", "attestation", "facade", "trustedge"]
categories = ["cryptography", "development-tools", "authentication"]

[package.metadata.trustedge]
tier = "experimental"
maintained = false

[dependencies]
trustedge-core = { path = "../core" }
