#
# Copyright (c) 2025 TRUSTEDGE LABS LLC
# This source code is subject to the terms of the Mozilla Public License, v. 2.0.
# If a copy of the MPL was not distributed with this file, You can obtain one at https://mozilla.org/MPL/2.0/.
#
# Project: trustedge — Privacy and trust at the edge.
#
[package]
name = "trustedge-core"
version = "0.2.0"
edition = "2021"
description = "Core cryptographic library and CLI tools for privacy-preserving edge computing"
authors = ["TrustEdge Labs LLC <contact@trustedgelabs.com>"]
license = "MPL-2.0"
repository = "https://github.com/TrustEdge-Labs/trustedge"
keywords = ["cryptography", "privacy", "edge-computing", "encryption", "audio"]
categories = ["cryptography", "command-line-utilities", "multimedia::audio"]

[lib]
name = "trustedge_core"
path = "src/lib.rs"

[[bin]]
name = "trustedge-server"
path = "src/bin/trustedge-server.rs"

[[bin]]
name = "trustedge-client" 
path = "src/bin/trustedge-client.rs"

[[bin]]
name = "software-hsm-demo"
path = "src/bin/software-hsm-demo.rs"

[[bin]]
name = "yubikey-demo"
path = "src/bin/yubikey-demo.rs"
required-features = ["yubikey"]



[dependencies]
# Use workspace dependencies where possible
aead = { workspace = true }
aes-gcm = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
chacha20poly1305 = "0.10"
chrono = { workspace = true }
clap = { workspace = true }
cpal = { version = "0.15", optional = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
keyring = { workspace = true }
num-traits = { workspace = true }
p256 = { workspace = true, features = ["ecdh"] }
pbkdf2 = { workspace = true }
pkcs11 = { version = "0.5", optional = true }
yubikey = { version = "0.7", optional = true, features = ["untested"] }
rand = { workspace = true }
rand_core = { workspace = true }
rsa = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }

# Crate-specific dependencies not in workspace
sha2 = "0.10"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = { version = "0.3", features = ["sink"] }
zeroize = "1.7"
thiserror = { workspace = true }

# Network dependencies
quinn = "0.11"
rustls = "0.23"

# X.509 certificate generation and validation
x509-cert = { version = "0.2", features = ["builder"], optional = true }
signature = { version = "2.2", optional = true }
der = { version = "0.7", optional = true }
spki = { version = "0.7", optional = true }



[features]
default = []         # No features by default (CI-friendly)
audio = ["cpal"]     # Audio capture feature (opt-in)
yubikey = ["pkcs11", "dep:yubikey", "x509-cert", "der", "spki", "signature"] # YubiKey hardware support with real hardware integration


[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
predicates = "3"
tempfile = "3"

[[bench]]
name = "crypto_benchmarks"
harness = false

[[bench]]
name = "network_benchmarks"
harness = false
