# Copyright (c) 2025 TRUSTEDGE LABS LLC
# MPL-2.0: https://mozilla.org/MPL/2.0/
# Project: trustedge — Privacy and trust at the edge.


[package]
name = "trustedge-receipts"
version = "0.3.0"
edition = "2021"
description = "DEPRECATED: Use trustedge-core instead. Digital receipt system with cryptographically secure ownership chains"
authors = ["TrustEdge Labs LLC <contact@trustedgelabs.com>"]
license = "MPL-2.0"
repository = "https://github.com/TrustEdge-Labs/trustedge"
readme = "README.md"
keywords = ["deprecated", "cryptography", "receipts", "ownership", "blockchain"]
categories = ["cryptography", "data-structures"]

[dependencies]
trustedge-core = { path = "../core" }

[dev-dependencies]
