# Copyright (c) 2025 TRUSTEDGE LABS LLC
# MPL-2.0: https://mozilla.org/MPL/2.0/
# Project: sealedge — Privacy and trust at the edge.


[package]
name = "sealedge-seal-cli"
version = "0.2.0"
edition = "2021"
description = "Sealedge archive CLI"
authors = ["TrustEdge Labs <dev@trustedgelabs.com>"]
license = "MPL-2.0"

[[bin]]
name = "seal"
path = "src/main.rs"
test = false

[package.metadata.trustedge]
tier = "stable"
maintained = true

[features]
yubikey = ["sealedge-core/yubikey"]

[dependencies]
anyhow = { workspace = true }
base64 = "0.22"
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
ed25519-dalek = { workspace = true }
p256 = { workspace = true }
rand_core = { workspace = true }
rpassword = "7"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sealedge-core = { path = "../core" }
sealedge-types = { workspace = true }
hex = { workspace = true }
chacha20poly1305 = "0.10"
rand = "0.9"
rand_chacha = "0.9"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
blake3 = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
p256 = { workspace = true }
