# Copyright (c) 2025 TRUSTEDGE LABS LLC
# MPL-2.0: https://mozilla.org/MPL/2.0/
# Project: trustedge — Privacy and trust at the edge.


[package]
name = "trustedge-trst-cli"
version = "0.2.0"
edition = "2021"
description = "TrustEdge .trst archive CLI"
authors = ["TrustEdge Labs <dev@trustedgelabs.com>"]
license = "MPL-2.0"

[[bin]]
name = "trst"
path = "src/main.rs"
test = false

[dependencies]
anyhow = { workspace = true }
base64 = "0.22"
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
ed25519-dalek = { workspace = true }
rand_core = { workspace = true, features = ["getrandom"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
trustedge-trst-protocols = { path = "../trst-protocols" }
trustedge-core = { path = "../core" }
hex = { workspace = true }
chacha20poly1305 = "0.10"
rand = "0.8"
rand_chacha = "0.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
blake3 = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
warp = "0.3"
